--- a/client/src/css/savedBooks.css
+++ b/client/src/css/savedBooks.css
@@ -1,5 +1,16 @@
 .saved-books-container{
     width: 100%;
     height: 100%;
+}
+
+.saved-books-collection, .current-books-collection, .finished-books-collection {
     display: flex;
+    flex-direction: row;
+    overflow: scroll;
+    gap: 2rem;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+.saved-books-collection::-webkit-scrollbar, .current-books-collection::-webkit-scrollbar, .finished-books-collection::-webkit-scrollbar {
+    display: none;
 }
