--- a/client/src/css/savedBooks.css
+++ b/client/src/css/savedBooks.css
@@ -11,6 +11,8 @@
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
 }
+
+/* Removes scrollbar on overflow */
 .saved-books-collection::-webkit-scrollbar, .current-books-collection::-webkit-scrollbar, .finished-books-collection::-webkit-scrollbar {
     display: none;
 }
