--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,15 @@
 #root {
+  --eggshell: #F0EBD8;
+  --midnight-green: #0B3948;
+  --old-rose: #C8786A
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  /* set custom background color */
+  background-color: var(--eggshell);
+  /* set custom text color */
+  color: var(--midnight-green);
 }
 
 .card {
