--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,47 @@
-#root {
+:root {
   --eggshell: #F0EBD8;
   --midnight-green: #0B3948;
   --old-rose: #C8786A;
-  max-width: 1280px;
+}
+
+#root {
   margin: 0 auto;
   text-align: center;
-  /* set custom background color */
-  background-color: var(--eggshell);
-  /* set custom text color */
+  /* custom font color */
   color: var(--midnight-green);
+}
+
+body {
+  /* custom background color */
+  background-color: var(--eggshell);
+  min-height: 100vh;
+}
+
+header {
+  height: 8vh;
+  position: sticky;
+  top: 0;
+}
+
+.home-banner {
+  background-image: url("./assets/bookshelf.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  height: 80vh;
+  position: sticky;
+  top: 8vh;
+  z-index: -1;
+}
+
+.home-container {
+  position: relative;
+  background-color: var(--eggshell);
+  z-index: 12;
+}
+
+main {
+  height: 200vh;
 }
 
 .card {
