--- a/client/src/css/library.css
+++ b/client/src/css/library.css
@@ -1,27 +1,41 @@
+:root {
+    --eggshell: #F0EBD8;
+    --midnight-green: #0B3948;
+    --old-rose: #C8786A;
+    --mint: #44C5A7;
+    --pacific-cyan: #31AFD4;
+    --gunmetal: #252B2C;
+    --floral-white: #F9F7F0;
+}
 
 .library-container {
     display: flex;
     flex-direction: row;
     margin-top: 5em;
-    /* gap: 2em; */
     width: 100%;
+    padding: 0 2em;
+    gap: 1em;
 }
 
 .library-selection{
-    height: 20em;
+    height: fit-content;
     min-width: 25%;
     position: -webkit-sticky;
     position: sticky;
     top: 30%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    border: 1px solid var(--gunmetal);
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 10px;
+    background-color: #F9F7F0;
 }
 
 .library-selection p{
-    font-size: 30px;
+    font-size: 36px;
     margin-bottom: 1em;
+    font-weight: 600;
 }
 
 .library-list{
@@ -34,7 +48,8 @@
 }
 
 .library-list li:hover {
-    scale: 1.1;
+    scale: 1.2;
+    color: black;
     cursor: pointer;
 }
 
@@ -56,16 +71,35 @@
 
 .book-cover img {
     height: 20em;
+    border: 6px solid var(--floral-white);
+}
+
+.book-cover img:hover{
+    scale: 1.1;
+    cursor: pointer;
 }
 
 /* Mobile L */
 @media screen and (max-width: 426px){
     .library-container{
         flex-direction: column;
+        padding: 1em;
+        margin-top: 2em;
     }
 
     .library-selection{
         position: relative;
+        width: 75%;
+        display: flex;
+        margin: 0 auto;
+    }
+
+    .library-selection p{
+        font-size: 26px;
+    }
+
+    .library-list{
+        font-size: 16px
     }
 
     .book-cover img {
