--- a/client/src/css/genreCard.css
+++ b/client/src/css/genreCard.css
@@ -10,14 +10,16 @@
 }
 
 .cards{
-    background-color: grey;
+    background-color: var(--gunmetal);
     border-radius: 10px;
     cursor: pointer;
     padding: 5px;
+    transition: 0.2s ease-out;
 }
 
 .cards:hover{
     scale: 1.1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .cards p {
@@ -28,7 +30,8 @@
 }
 
 .selected {
-    background-color: blue;
+    background-color: var(--mint);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .genre-btn {
