--- a/client/src/css/signUpList.css
+++ b/client/src/css/signUpList.css
@@ -37,6 +37,8 @@ ul.author-list::-webkit-scrollbar{
     border-radius: 5px;
     background-color: rgba(255, 0, 0, 0.25);
     transition: 0.5s ease-out ;
+    padding: 2px 5px;
+    margin-bottom: 0;
 }
 
 .list-item button:hover{
