--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -13,6 +13,8 @@
     position: relative;
     margin-top: 30px;
     height: 20rem;
+    box-shadow: none;
+    background-color: transparent;
 }
 
 .login-form fieldset{
