--- a/client/src/css/feed.css
+++ b/client/src/css/feed.css
@@ -1,3 +1,15 @@
+.info-col div,
+.info-col button {
+    font-size: 1.2em;
+}
+
+.info-col {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 1em;
+}
+
 #dismiss-button {
     background-color: var(--old-rose);
     border-color: var(--old-rose);
