--- a/client/src/css/settings.css
+++ b/client/src/css/settings.css
@@ -1,13 +1,3 @@
-:root {
-    --eggshell: #F0EBD8;
-    --midnight-green: #0B3948;
-    --old-rose: #C8786A;
-    --mint: #44C5A7;
-    --pacific-cyan: #31AFD4;
-    --gunmetal: #252B2C;
-    --floral-white: #F9F7F0;
-}
-
 .settings-container {
     text-align: center;
     background-color: var(--eggshell);
@@ -20,7 +10,7 @@
 }
 
 .settings-container h1 {
-    color: var(--midnight-green);
+    color: var(--gunmetal);
 }
 
 form {
