--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -62,6 +62,7 @@
     border-radius: 15px;
     padding: 15px;
     box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
+    background-color: var(--floral-white);
 }
 
 .info-content h3{
