--- a/client/src/css/bookModal.css
+++ b/client/src/css/bookModal.css
@@ -37,9 +37,16 @@
 
 .close-btn button {
     background-color: transparent;
+    color: var(--old-rose);
+    padding: 5px 10px;
     border: none;
     font-size: 25px;
     cursor: pointer;
+}
+
+.close-btn button:hover{
+    color: red;
+    background-color: rgba(255, 0, 0, 0.25);
 }
 
 .modal-container .body {
@@ -89,6 +96,9 @@ button.btn-action:hover{
     font-size: 20px;
     cursor: pointer;
     transition: 0.5s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-btn:hover{
