--- a/client/src/css/library.css
+++ b/client/src/css/library.css
@@ -35,17 +35,19 @@
     display: flex;
     flex-direction: column;
     row-gap: 0.5em;
+    transition: 0.5s ease-out;
 }
 
 .library-list li:hover {
     scale: 1.2;
-    color: black;
+    color: var(--mint);
     cursor: pointer;
 }
 
 .books-container {
     width: 100%;
-    width: 100%;
+    box-shadow: rgba(255, 255, 255, 1) 0px 5px 15px;
+    padding: 2em 1em;    
 }
 
 .books-collection {
@@ -61,7 +63,8 @@
 
 .book-cover img {
     height: 20em;
-    border: 6px solid var(--floral-white);
+    border: 6px solid white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
 }
 
 .book-cover img:hover{
