--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -6,6 +6,8 @@ header{
     width: 100%;
     height: 6em;
     padding: 20px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-bottom: 3em;
 }
 
 .Navbar{
