Fixed style issue in homepage

--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -1,3 +1,7 @@
+.home-container{
+    margin-top: -3em;
+}
+
 .home-overlay {
     background-image: url("../assets/background.jpg");
     background-repeat: no-repeat;
