--- a/client/src/css/footer.css
+++ b/client/src/css/footer.css
@@ -2,13 +2,14 @@
     width: 100%;
     margin: 8em 0 0 0;
     bottom: 0;
-    background-color: var(--gunmetal);
+    background: linear-gradient(to top, #252B2C, #3A3F40);
     padding: 20px 0 30px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: var(--floral-white);
+    box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
 } 
 
 .subscription {
