--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -6,8 +6,12 @@ header{
     width: 100%;
     height: 6em;
     padding: 20px 15px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin-bottom: 3em;
+    box-shadow: rgba(255, 255, 255, 0.10) 0px 5px 15px;
+    background: linear-gradient(to bottom right, #F0EBD8, #eeecd6);
+    height: var(--header-height);
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .Navbar{
