--- a/client/src/css/feed.css
+++ b/client/src/css/feed.css
@@ -3,46 +3,39 @@
 }
 
 .feed-container{
-    min-height: calc(100vh - 84px);
+    min-height: calc(100vh - 115px);
+    max-height: calc(100vh - 115px);
     margin-bottom: -8em;
     display: flex;
-    padding-top: 3em;
+    /* padding-top: 3em; */
     background: linear-gradient(to bottom, #252B2C, #3A3F40);
-    max-width: 100%
+    max-width: 100%;
+    overflow-y: hidden;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+
+.feed-container::-webkit-scrollbar{
+    display: none;
 }
 
 .feed-content{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    column-gap: 10%;
+    row-gap: 2vh;
     padding: 0 3em;
     max-width: 100%;
 }
 
-.feed-item-container{
-    width: 350px;
-    height: 500px;
-    margin: auto 0;
-    transform: translateY(-5%);
-    box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
-}
-
-.feed-img {
-    border: 6px solid white;
-}
-
-.feed-info{
-    max-width: 55%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+/* author and title */
+.book-info{
 }
 
 .feed-title{
     max-height: 66px;
     max-width: 100%;
-    display: inline-block;    
+    display: inline-block;   
 }
 
 .feed-title h3{
@@ -63,10 +56,40 @@
     color: var(--floral-white);
 }
 
+/* img and description */
+.feed-info{
+    min-width: 100%;
+    max-height: 50vh;
+    display: flex;
+    flex-direction: row;
+    column-gap: 5vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.feed-image-container{
+    /* width: 300vw; */
+    /* width: 30%; */
+    min-width: 17em;
+    /* width: calc(250vw - 5vh);
+    height: calc(70vh - 10vw); */
+    height: 50vh;
+    /* margin: auto 0; */
+    display: flex;
+    align-self: center;
+    box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
+    flex: 1;
+}
+
+.feed-img {
+    border: 6px solid white;
+}
+
+
 .feed-description{
-    margin: 25px 0;
-    height: 27em;
-    max-width: 100%;
+    /* margin: 25px 0; */
+    max-height: calc(50vh - 3em);
+    max-width: 70%;
     overflow-y: scroll;
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
@@ -85,7 +108,7 @@
 }
 
 .feed-btns {
-    margin-top: 1em;
+    margin-top: 2em;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -97,9 +120,11 @@
     color: var(--floral-white);
     transition: 0.5s ease-out;
     border: 1px solid var(--mint);
+    font-size: 24px;
+    width: 65px;
 }
 
-#save-button:hover{
+#save-button:hover, #small-save-button:hover{
     background-color: transparent;
     color: var(--mint);
     border: 1px solid var(--mint);
@@ -111,11 +136,158 @@
     color: var(--floral-white);
     transition: 0.5s ease-out;
     border: 1px solid var(--old-rose);
+    font-size: 24px;
+    width: 65px;
 }
 
-#dismiss-button:hover{
+#dismiss-button:hover, #small-dismiss-button:hover{
     background-color: transparent;
     color: var(--old-rose);
     border: 1px solid var(--old-rose);
     box-shadow: rgba(255, 255, 255, 0.15) 0px 5px 15px; 
+}
+
+/* CSS for when screen size is < 1024 */
+
+.small-feed-content{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* margin: 0 auto; */
+    justify-content: center;
+    padding: 3em 0;
+    row-gap: 2em;
+    max-height: 100%;
+}
+
+.feed-img-container{
+    display: flex;
+    justify-content: center;
+}
+
+.small-feed-image-container{
+    min-width: 60vw;
+    max-width: 60vw;
+    /* min-width: calc(95vw - 50vh);
+    max-width: calc(95vw - 50vh); */
+    height: 65vh;
+    position: relative;
+    box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
+    /* flex: 1; */
+    transition: smooth;
+    z-index: 2;
+
+}
+
+.small-feed-img {
+    border: 6px solid white;
+    width: 100%;
+    height: 100%;
+}
+
+.img-text-overlay{
+    position: absolute;
+    background-color: black;
+    color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-text-overlay p {
+    margin: auto 0;
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.save-text{
+    background-color: var(--mint);
+}
+
+.dislike-text{
+    background-color: var(--old-rose);
+}
+
+.next-img-container{
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
+    z-index: 1;
+    min-width: 45vw;
+    max-width: 45vw;
+    height: 50vh;
+
+}
+
+.next-feed-img{
+    border: 6px solid white;
+    width: 100%;
+    height: 100%;
+}
+
+.small-feed-btns{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 25%;
+}
+
+#small-save-button{
+    background-color: var(--mint);
+    color: var(--floral-white);
+    transition: 0.5s ease-out;
+    border: 1px solid var(--mint);
+    width: 65px;
+    padding: 0;
+}
+
+#small-dismiss-button{
+    text-align: center;
+    background-color: var(--old-rose);
+    color: var(--floral-white);
+    transition: 0.5s ease-out;
+    border: 1px solid var(--old-rose);
+    width: 65px;
+    padding: 0;
+}
+
+#small-dismiss-button > svg, #small-save-button > svg{
+    /* margin: 0 auto; */
+    font-size: 2em;
+    padding: 10px 5px;
+}
+
+@media screen and (max-width: 565px){
+    .small-feed-image-container{
+        min-width: 70vw;
+        max-width: 70vw;
+    }
+
+    .next-img-container{
+        min-width: 55vw;
+        max-width: 55vw;
+    }
+}
+
+@media screen and (max-width: 375px){
+    .small-feed-image-container{
+        height: 60vh;
+        min-width: 75vw;
+        max-width: 75vw;
+    }
+
+    .next-img-container{
+        min-width: 60vw;
+        max-width: 60vw;
+        height: 45vh;
+    }
 }
