--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -4,14 +4,14 @@ header{
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 6em;
+    min-height: 115px;
     padding: 20px 15px;
     box-shadow: rgba(255, 255, 255, 0.10) 0px 5px 15px;
     background: linear-gradient(to bottom right, #F0EBD8, #eeecd6);
     height: var(--header-height);
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 .Navbar{
