--- a/client/src/css/footer.css
+++ b/client/src/css/footer.css
@@ -1,6 +1,6 @@
 .footer-container {
     width: 100%;
-    margin: 8em 0 0 0;
+    /* margin: 8em 0 0 0; */
     bottom: 0;
     background: linear-gradient(to top, #252B2C, #3A3F40);
     padding: 20px 0 30px 0;
