--- a/client/src/css/bookModal.css
+++ b/client/src/css/bookModal.css
@@ -29,6 +29,17 @@
     font-weight: 700;
 }
 
+.title-overflow{
+    max-width: 100%;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+}
+
 .author h2{
     font-weight: 500;
     font-size: calc(1rem + 2vw);
