--- a/client/src/css/signUp.css
+++ b/client/src/css/signUp.css
@@ -1,5 +1,5 @@
 .signup-container{
-    height: calc(100vh - 115px);
+    height: calc(100vh - 11vh);
     display: flex;
     flex-direction: column;
     justify-content: center;
