--- a/client/src/css/feed.css
+++ b/client/src/css/feed.css
@@ -3,8 +3,8 @@
 }
 
 .feed-container{
-    min-height: calc(100vh - 115px);
-    max-height: calc(100vh - 115px);
+    min-height: calc(100vh - 11vh);
+    max-height: calc(100vh - 11vh);
     /* min-height: 100vh; */
     /* margin-bottom: -8em; */
     display: flex;
@@ -28,9 +28,30 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 2vh;
+    row-gap: 2rem;
     padding: 0 3em;
     max-width: 100%;
+}
+
+.switch-mode{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    margin: 1.5rem 0.5rem 0.75rem 0;
+    column-gap: 0.5rem;
+}
+
+.switch-text p {
+    color: white;
+    font-size: 90%;
+    margin: 0;
+}
+
+.switch-btn button {
+    padding: 3px 10px;
+    background-color: transparent;
+    border: 1px solid var(--mint);
 }
 
 .feed-title{
@@ -41,7 +62,7 @@
 
 .feed-title h3{
     text-align: center;
-    font-size: 250%;
+    font-size: calc(1.3rem + 3vw);
     font-weight: 700;
     color: var(--floral-white);
     text-transform: uppercase;
@@ -51,7 +72,7 @@
 }
 
 .feed-authors p {
-    font-size: 150%;
+    font-size: calc(1rem + 1.5vw);
     font-weight: 500;
     margin-bottom: 0;
     color: var(--floral-white);
@@ -108,11 +129,12 @@
     font-size: 125%;
 }
 
-.feed-btns {
+.feed-btns, .small-feed-btns {
     margin-top: 2em;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     gap: 5%;
 }
 
@@ -121,8 +143,16 @@
     color: var(--floral-white);
     transition: 0.5s ease-out;
     border: 1px solid var(--mint);
-    font-size: 24px;
-    width: 65px;
+    font-size: calc(1.33rem + 1vw);
+    width: calc(7.33rem + 5vw);
+    height: calc(2rem + 2vh);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#save-button > svg,  #dismiss-button > svg{
+    height: calc(0.66rem + 2vh);
 }
 
 #save-button:hover, #small-save-button:hover{
@@ -137,8 +167,12 @@
     color: var(--floral-white);
     transition: 0.5s ease-out;
     border: 1px solid var(--old-rose);
-    font-size: 24px;
-    width: 65px;
+    font-size: calc(1.33rem + 1vw);
+    width: calc(7.33rem + 5.5vw);
+    height: calc(2rem + 2vh);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #dismiss-button:hover, #small-dismiss-button:hover{
@@ -148,17 +182,79 @@
     box-shadow: rgba(255, 255, 255, 0.15) 0px 5px 15px; 
 }
 
-/* CSS for when screen size is < 1024 */
+/* Tablet */
+@media screen and (max-width: 769px){
+    .feed-content{
+        padding: 0 1rem;
+    }
+}
+
+@media screen and (max-width: 646px){
+    .feed-image-container{
+        min-width: 14em;
+        height: 40vh;
+    }
+}
+
+@media screen and (max-width: 600px){
+
+    .feed-container{
+        flex-direction: column;
+    }
+
+    .feed-content{
+        row-gap: calc(0.5rem + 2vh);
+        height: calc(100vh - 28.33px - 11vh);
+        margin-top: -3.5vh;
+    }
+
+    .feed-info{
+        flex-direction: column;
+        row-gap: 1rem;
+    }
+
+    .feed-image-container{
+        min-width: calc(7.75rem + 9.5vw);
+        height: 30vh;
+    }
+
+    .feed-description{
+        max-width: 100%;
+    }
+
+    .feed-description p{
+        /* min-width: 100%; */
+        font-size: 95%;
+    }
+
+    .feed-btns{
+        margin-top: 0;
+    }
+}
+
+@media screen and (max-width: 376px){
+    .feed-content{
+        padding: 0 0.5rem;
+    }
+
+    .feed-description p {
+        font-size: 85%;
+    }
+}
+
+/* CSS for when screen size is in swipe mode */
 
 .small-feed-content{
     display: flex;
     flex-direction: column;
     width: 100%;
-    /* margin: 0 auto; */
+    margin: auto 0;
     justify-content: center;
-    padding: 3em 0;
-    row-gap: 2em;
+    align-items: center;
+    /* padding: 3em 0; */
+    row-gap: 8vh;
     max-height: 100%;
+    min-height: 100%;
 }
 
 .feed-img-container{
@@ -171,7 +267,7 @@
     max-width: 60vw;
     /* min-width: calc(95vw - 50vh);
     max-width: calc(95vw - 50vh); */
-    height: 65vh;
+    height: 60vh;
     position: relative;
     box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
     /* flex: 1; */
@@ -216,11 +312,8 @@
 
 .next-img-container{
     position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    /* margin: auto auto auto auto; */
+    
     box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
     z-index: 1;
     min-width: 45vw;
@@ -235,11 +328,13 @@
     height: 100%;
 }
 
-.small-feed-btns{
+.small-feed-btns {
+    margin-top: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 25%;
+    align-items: center;
+    gap: 8vw;
 }
 
 #small-save-button{
@@ -247,24 +342,29 @@
     color: var(--floral-white);
     transition: 0.5s ease-out;
     border: 1px solid var(--mint);
-    width: 65px;
-    padding: 0;
+    font-size: calc(1.33rem + 1vw);
+    width: calc(6.5rem + 5vw);
+    height: calc(2rem + 2vh);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #small-dismiss-button{
-    text-align: center;
     background-color: var(--old-rose);
     color: var(--floral-white);
     transition: 0.5s ease-out;
     border: 1px solid var(--old-rose);
-    width: 65px;
-    padding: 0;
+    font-size: calc(1.33rem + 1vw);
+    width: calc(6.5rem + 5.5vw);
+    height: calc(2rem + 2vh);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #small-dismiss-button > svg, #small-save-button > svg{
-    /* margin: 0 auto; */
-    font-size: 2em;
-    padding: 10px 5px;
+    height: calc(0.66rem + 2vh);
 }
 
 .not-loggedIn {
@@ -288,6 +388,33 @@
 
 @media screen and (max-width: 565px){
     .small-feed-image-container{
+        /* min-width: 70vw;
+        max-width: 70vw; */
+        height: 52.5vh;
+    }
+
+    .next-img-container{
+        /* min-width: 55vw;
+        max-width: 55vw; */
+        height: 42.5vh;
+    }
+}
+
+@media screen and (max-width: 426px){
+
+    #small-save-button, #small-dismiss-button{
+        width: calc(6.5rem + 5vw);
+        height: calc(2rem + 2vh);
+    }
+
+    #small-dismiss-button > svg, #small-save-button > svg{
+        height: calc(0.5rem + 2vh);
+    }
+}
+
+@media screen and (max-width: 375px){
+    .small-feed-image-container{
+        height: 50vh;
         min-width: 70vw;
         max-width: 70vw;
     }
@@ -295,19 +422,6 @@
     .next-img-container{
         min-width: 55vw;
         max-width: 55vw;
-    }
-}
-
-@media screen and (max-width: 375px){
-    .small-feed-image-container{
-        height: 60vh;
-        min-width: 75vw;
-        max-width: 75vw;
-    }
-
-    .next-img-container{
-        min-width: 60vw;
-        max-width: 60vw;
-        height: 45vh;
+        height: 40vh;
     }
 }
