--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -4,7 +4,7 @@ header{
     flex-direction: row;
     align-items: center;
     width: 100%;
-    min-height: 115px;
+    /* min-height: 115px; */
     padding: 20px 15px;
     box-shadow: rgba(255, 255, 255, 0.10) 0px 5px 15px;
     background: linear-gradient(to bottom right, #F0EBD8, #eeecd6);
@@ -69,7 +69,7 @@ div.navbar-nav{
 
     header{
         padding: 0;
-        height: 8em;
+        /* height: 8em; */
     }
 }
 
