--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,13 @@
 :root {
-  --eggshell: #F0EBD8;
   --old-rose: #C8786A;
   --mint: #44C5A7;
   --pacific-cyan: #31AFD4;
   --gunmetal: #252B2C;
   --floral-white: #F9F7F0;
   --header-height: 11vh;
+  --main-background: linear-gradient(to bottom, #252B2C, #3A3F40);
+  --radial-background: radial-gradient(#252B2C, #3A3F40);
+  --footer-background: linear-gradient(to bottom, #4D5253, #5A5F60);
 }
 
 #root {
@@ -21,7 +23,8 @@ a {
 
 body {
   /* custom background color */
-  background-color: var(--eggshell);
+  background-image: radial-gradient(#252B2C, #3A3F40);
+  /* background-color: var(--floral-white); */
   min-height: 100vh;
 }
 
